--- a/webapp/home.html
+++ b/webapp/home.html
@@ -31,6 +31,21 @@
 				</div>
 			</div>
 			
+			<!-- Cục cập nhập led-->
+			<div class="list-group-item list-group-item-home">
+				<div>
+					<i class="fa fa-tachometer feature-icon  text-primary"></i>
+				</div>
+				<div>
+					<h3 class="home-heading">Cập nhập cảm biến</h3>
+					<button class="button" ng-click="upt()">
+						Nhấn vô dể cập nhập giá trị cảm biến
+					</button>
+				</div>
+			</div>
+			
+			
+			
 			<!-- Cục cập nhập giá trị servo -->
 			<div class="list-group-item list-group-item-home">
 				<div>
