--- a/webapp/home.html
+++ b/webapp/home.html
@@ -37,7 +37,7 @@
 					<i class="fa fa-tachometer feature-icon  text-primary"></i>
 				</div>
 				<div>
-					<h3 class="home-heading">Cập nhập cảm biến</h3>
+					<h3 class="home-heading">D ON</h3>
 					<button class="button" ng-click="upt()">
 						Nhấn vô dể cập nhập giá trị cảm biến
 					</button>
