--- a/webapp/home.html
+++ b/webapp/home.html
@@ -38,7 +38,7 @@
 				</div>
 				<div>
 					<h3 class="home-heading">cổng</h3>
-					<button class="button<.button2 {background-color: white;color: green;border: 2px solid #008CBA; border-radius: 8px;" ng-click="upt()">
+					<button class="\button.button2 {background-color: white;color: green;border: 2px solid #008CBA; border-radius: 8px;\" ng-click="upt()">
 						ON  D6
 					</button>
 				</div>
