--- a/webapp/home.html
+++ b/webapp/home.html
@@ -1,10 +1,13 @@
+
 <div class="scrollable">
 	<div class="scrollable-content">
 		<div class="list-group text-center">
 			<!-- cục giới thiệu -->
 			<div class="list-group-item list-group-item-home">
-				<h1>Socket Client Webapp <small>1.0</small>
+		        <img src="https://vtv1.mediacdn.vn/k:2015/untitled-1-1431324468444/toi-thay-hoa-vang-tren-co-xanh-tung-trailer-chinh-thuc.jpg" width="1200px" height="300">    
+				<h1>Socket Client <small>đồ án</small>
 				</h1>
+				
 			</div>
 			
 			<!-- Cục cảm biến mưa -->
