--- a/webapp/home.html
+++ b/webapp/home.html
@@ -1,16 +1,13 @@
-
 <div class="scrollable">
 	<div class="scrollable-content">
 		<div class="list-group text-center">
 			<!-- cục giới thiệu -->
 			<div class="list-group-item list-group-item-home">
-		       
-				<h1>Socket Client <small>đồ án</small>
+				<h1>Socket Client Webapp <small>1.0</small>
 				</h1>
-				
 			</div>
 			
-			<!-- Cục cảm biến mưa -->
+                 <!-- Cục cập nhập giá trị cảm biến mua-->
 			<div class="list-group-item list-group-item-home">
 				<div>
 					<i class="fa fa-gamepad feature-icon text-primary"></i>
