--- a/webapp/home.html
+++ b/webapp/home.html
@@ -3,6 +3,8 @@
 		<div class="list-group text-center">
 			<!-- cục giới thiệu -->
 			<div class="list-group-item list-group-item-home">
+				<body style='background-color:green'>
+				<img src=http://vtv1.vcmedia.vn/k:2015/untitled-1-1431324468444/toi-thay-hoa-vang-tren-co-xanh-tung-trailer-chinh-thuc.jpg width=1200px height=200px>
 				<h1>Socket Client Webapp <small>1.0</small>
 				</h1>
 			</div>
