--- a/webapp/home.html
+++ b/webapp/home.html
@@ -5,7 +5,7 @@
         }
       
         #header{
-            background-color:#73ad21;
+            background-color:green;
             color:white;
         }
       
