--- a/webapp/home.html
+++ b/webapp/home.html
@@ -19,6 +19,7 @@
     </style>
 </head>
 
+<center>
 
 <div class="scrollable">
 	<div class="scrollable-content ">
@@ -62,3 +63,4 @@
 		</div>
 	</div>
 </div>
+			</center>
