--- a/webapp/home.html
+++ b/webapp/home.html
@@ -20,7 +20,7 @@
 </head>
 
       <center>
-
+    <body
         <div class="scrollable">
 	<div class="scrollable-content ">
 		<div class="list-group text-center">
@@ -33,7 +33,7 @@
 				<h1>Socket Client Webapp <small>1.0</small>
 				   </h1>
 				   
-			
+				   </body>	
 		</center>	  
        
 			 </div
