--- a/webapp/home.html
+++ b/webapp/home.html
@@ -68,7 +68,7 @@
 				
 				</div>
 			</div>
-	
+	<footer><center>Copyright &copy;NGUYEN TUAN ANH& TRAN KHA CUONG</div></center>
 		</div>
 	</div>
 </div>
