--- a/webapp/home.html
+++ b/webapp/home.html
@@ -3,13 +3,19 @@
         body{
             margin:0px;
         }
-      
+          margin:0px;
+        }
+        #container{
+            width:800px;
+            border:1px solid gray;
+            margin-left:auto;
+            margin-right:auto;
+        }
         #header{
-            background-color:green;
+            background-color:#73ad21;
             color:white;
         }
       
-        }
         .title1{
             font-size:30px;
             text-align:center;
