--- a/webapp/home.html
+++ b/webapp/home.html
@@ -7,7 +7,7 @@
         }
    
         #header{
-            background-color:#73ad21;
+            background-colorgreen;
             color:white;
         }
       
