--- a/webapp/home.html
+++ b/webapp/home.html
@@ -7,7 +7,7 @@
         }
    
         #header{
-            background-colorgreen;
+            background-color:green;
             color:white;
         }
       
