--- a/webapp/home.html
+++ b/webapp/home.html
@@ -1,8 +1,6 @@
 
  <style type="text/css">
-         body{
-            margin:0px;
-        }
+         body
         #container{
             width:800px;
             border:1px solid gray;
