--- a/webapp/home.html
+++ b/webapp/home.html
@@ -34,12 +34,15 @@
 
     <body>
      <body>
-    <div id="container">
-        <div id="header">
-            <div class="title1">WEB CƠ BẢN .VN</div>
-            <div class="title2">Hướng dẫn học lập trình web từ cơ bản đến nâng cao</div>
-        </div>
-			 </div
+<div class="scrollable">
+	<div class="scrollable-content">
+	<div class="list-group text-center">
+	<!-- cục giới thiệu -->
+	<div class="list-group-item list-group-item-home">
+	<h1>Socket Client Webapp <small>1.0</small>
+		</h1>
+			</div>
+			
 					
 		   </body>	
 	  
