--- a/webapp/home.html
+++ b/webapp/home.html
@@ -2,7 +2,12 @@
         body{
             margin:0px;
         }
-      
+       #container{
+            width:1200x;
+            border:1px solid gray;
+            margin-left:auto;
+            margin-right:auto;
+        }
         #header{
             background-color:green;
             color:white;
@@ -36,7 +41,7 @@
                  <div id="container">
                            <div id="header">
                            <div class="title1">SOCKET WEB</div>
-				<img src=http://vtv1.vcmedia.vn/k:2015/untitled-1-1431324468444/toi-thay-hoa-vang-tren-co-xanh-tung-trailer-chinh-thuc.jpg width=1400px height=400px>
+				<img src=http://vtv1.vcmedia.vn/k:2015/untitled-1-1431324468444/toi-thay-hoa-vang-tren-co-xanh-tung-trailer-chinh-thuc.jpg width=1400px height=300x>
 				<h1>Socket Client Webapp <small>1.0</small>
 			 </div
 			 </div		
