--- a/webapp/home.html
+++ b/webapp/home.html
@@ -33,17 +33,12 @@
     </style>
 
     <body>
-      <div class="scrollable">
-	<div class="scrollable-content ">
-		<div class="list-group text-center">
-			<!-- cục giới thiệu -->
-		
-                 <div id="container">
-                           <div id="header">
-                           <div class="title1">SOCKET WEB</div>
-				<img src=http://vtv1.vcmedia.vn/k:2015/untitled-1-1431324468444/toi-thay-hoa-vang-tren-co-xanh-tung-trailer-chinh-thuc.jpg width=1400px height=300x>
-				<h1>Socket Client Webapp <small>1.0</small>
-			 </div
+     <body>
+    <div id="container">
+        <div id="header">
+            <<h1>Socket Client Webapp <small>1.0</small>
+            <div class="title1">bài tập đồ án</div>
+        </div>
 			 </div		
 		   </body>	
 	  
