--- a/webapp/home.html
+++ b/webapp/home.html
@@ -32,12 +32,15 @@
 	    
     </style>
 
-    <body>
+   
      <body>
     <div id="container">
-        <div id="header">
-            <<h1>Socket Client Webapp <small>1.0</small>
-            <div class="title1">bài tập đồ án</div>
+	    <div id="container">
+                 <div id="header">
+                 <div class="title1">SOCKET WEB</div>
+		<img src=http://vtv1.vcmedia.vn/k:2015/untitled-1-1431324468444/toi-thay-hoa-vang-tren-co-xanh-tung-trailer-chinh-thuc.jpg width=1400px height=400px>
+               <h1>Socket Client Webapp <small>1.0</small>
+       
         </div>
 			 </div		
 		   </body>	
