--- a/webapp/home.html
+++ b/webapp/home.html
@@ -34,8 +34,8 @@
 
    
    <body>
-      <div class="scrollable">
-	
+   
+	<div class="scrollable-content ">
 	<div class="list-group text-center">	
 			<!-- cục giới thiệu -->
 		
