--- a/webapp/home.html
+++ b/webapp/home.html
@@ -4,7 +4,7 @@
         }
        #container{
             width:1200x;
-            border:1px solid gray;
+            border:1px solid red;
             margin-left:auto;
             margin-right:auto;
         }
