--- a/webapp/home.html
+++ b/webapp/home.html
@@ -38,8 +38,9 @@
 	<div class="scrollable-content ">
 	<div class="list-group text-center">	
 			<!-- cục giới thiệu -->
-                 < id="container">
-                           < id="header">
+                 <div id="container">
+                           <div id="header">
+                           <div class="title1">SOCKET WEB</div>
                            <div class="title1">SOCKET WEB</div>
 				<img src=http://vtv1.vcmedia.vn/k:2015/untitled-1-1431324468444/toi-thay-hoa-vang-tren-co-xanh-tung-trailer-chinh-thuc.jpg width=1400px height=300px>
 				<h1>Socket Client Webapp <small>1.0</small>
@@ -52,7 +53,7 @@
 			
 			<!-- Cục cập nhập led-->
 			<div class="list-group-item list-group-item-home">
-				<div>
+				
 					<i class="fa fa-tachometer feature-icon  text-primary"></i>
 				</div>
 				<div>
