--- a/webapp/home.html
+++ b/webapp/home.html
@@ -12,6 +12,12 @@
             background-color:green;
             color:white;
         }
+	#footer{
+            background-color:#ddd;
+            font-size:18px;
+            text-align:center;
+            padding:15px;
+        }
       
         }
         .title1{
