--- a/webapp/home.html
+++ b/webapp/home.html
@@ -13,7 +13,7 @@
             color:white;
         }
 	#footer{
-            background-color:#ddd;
+            background-color:green;
             font-size:18px;
             text-align:center;
             padding:15px;
