--- a/webapp/home.html
+++ b/webapp/home.html
@@ -32,6 +32,7 @@
 
    
        <body>
+	<center>
         <div class="scrollable">
 	<div class="scrollable-content ">
 		<div class="list-group text-center">
@@ -72,6 +73,7 @@
 				</div>
 			</div>
 	      <footer><center>Copyright &copy;NGUYEN TUAN ANH && TRAN KHA CUONG</div></center></footer>
+			</center>
 		</div>
 	</div>
     
