--- a/webapp/home.html
+++ b/webapp/home.html
@@ -2,12 +2,11 @@
         body{
             margin:0px;
         }
-       #container{
-            width:1200x;
-            border:1px solid red;
-            margin-left:auto;
-            margin-right:auto;
-        }
+      #container{
+            width:1500px;
+            border:3px solid red;
+              margin: 5px 5px 3px 5px;
+                }
         #header{
             background-color:green;
             color:white;
@@ -41,7 +40,7 @@
                  <div id="container">
                            <div id="header">
                            <div class="title1">SOCKET WEB</div>
-				<img src=http://vtv1.vcmedia.vn/k:2015/untitled-1-1431324468444/toi-thay-hoa-vang-tren-co-xanh-tung-trailer-chinh-thuc.jpg width=1400px height=400px>
+				<img src=http://vtv1.vcmedia.vn/k:2015/untitled-1-1431324468444/toi-thay-hoa-vang-tren-co-xanh-tung-trailer-chinh-thuc.jpg width=1400px height=250px>
 				<h1>Socket Client Webapp <small>1.0</small>
 			 </div
 			 </div		
