--- a/webapp/home.html
+++ b/webapp/home.html
@@ -3,9 +3,10 @@
             margin:0px;
         }
       #container{
-            width:1000px;
-            border:3px solid red;
-            
+            width:800px;
+            border:2px solid red;
+               margin-left:auto;
+            margin-right:auto;
                 }
         #header{
             background-color:green;
