--- a/webapp/home.html
+++ b/webapp/home.html
@@ -68,7 +68,11 @@
 					<button class="button button3" ng-click="upt81()">Off D8</button>
 					 <br>
 				</div>
-				
+				<div>
+					<h3 class="home-heading">TRẠNG THÁI ĐÈN LED</h3>
+					<div ng-repeat="led_value in leds_status  track by $index">
+						Đèn LED thứ {{$index}} đang {{led_value ? "Bật" : "Tắt"}}. <input type="checkbox" ng-true-value="1" ng-false-value="0" ng-change="changeLED()" ng-model="leds_status[$index]" />
+					</div>
 				</div>
 			</div>
 	<footer><center>Copyright &copy;NGUYEN TUAN ANH& TRAN KHA CUONG</div></center>
