--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<title>My App</title>
+		<link rel="stylesheet" href="/dist/css/mobile-angular-ui-hover.min.css" />
 		
+		<link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
+		
+		<link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
+		<script src="/angular.min.js"></script>
+		<script src="/angular-route.min.js"></script>
+		<script src="/dist/js/mobile-angular-ui.min.js"></script>
+		<script src="/dist/socket.io.min.js"></script>
+		<script src="/socket.min.js"></script>
+		<script src="/webapp.js"></script>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 	</head>
 	<body ng-app="myApp">
