--- a/webapp/home.html
+++ b/webapp/home.html
@@ -71,7 +71,7 @@
 				
 				</div>
 			</div>
-	<footer><center>Copyright &copy;NGUYEN TUAN ANH& TRAN KHA CUONG</div></center>
+	<footer><center>Copyright &copy;NGUYEN TUAN ANH&&TRAN KHA CUONG</div></center>
 		</div>
 	</div>
 </div>
