--- a/webapp/home.html
+++ b/webapp/home.html
@@ -55,6 +55,7 @@
 				</div>
 				<div>
 					<h3 class="home-heading">cổng</h3>
+					<input type="text" id="ip" class="ip" placeholder="lay theo code adruino"></input><br>
 					<button class="button button2" ng-click="upt5()">ON D5</button>
 					<button class="button button3" ng-click="upt51()">Off D5</button>
 					 <br>
