--- a/webapp/home.html
+++ b/webapp/home.html
@@ -80,8 +80,8 @@
 					<i class="fa fa-gamepad feature-icon text-primary"></i>
 				</div>
 				<div>
-					<h3 class="home-heading">trangthai</h3>
-					Kết quả: {{trangthai}}
+					<h3 class="home-heading">trạng thái</h3>
+					Kết quả: {{cambienmua}}
 				</div>
 			</div>
 			<!-- Cap nhat trang thai -->
