--- a/webapp/home.html
+++ b/webapp/home.html
@@ -75,14 +75,15 @@
 			
 		
 			<!-- trang thai 1 -->
-			<div class="list-group-item list-group-item-home">
+						<div class="list-group-item list-group-item-home">
 				<div>
 					<i class="fa fa-gamepad feature-icon text-primary"></i>
 				</div>
 				<div>
-					<h3 class="home-heading">trạng thái</h3>
-					Kết quả: {{cambienmua}}
+					<h3 class="home-heading">Cảm biến mưa</h3>
+					Kết quả: {{CamBienMua}}
 				</div>
+		
 			</div>
 			<!-- Cap nhat trang thai -->
 			<div class="list-group-item list-group-item-home">
