--- a/webapp/home.html
+++ b/webapp/home.html
@@ -73,9 +73,8 @@
 				</div>
 			</div>
 			
-		
-			<!-- trang thai 1 -->
-						<div class="list-group-item list-group-item-home">
+		<!-- Cục cảm biến mưa -->
+			<div class="list-group-item list-group-item-home">
 				<div>
 					<i class="fa fa-gamepad feature-icon text-primary"></i>
 				</div>
@@ -83,20 +82,20 @@
 					<h3 class="home-heading">Cảm biến mưa</h3>
 					Kết quả: {{CamBienMua}}
 				</div>
-		
 			</div>
-			<!-- Cap nhat trang thai -->
+		<!-- Cục cập nhập giá trị cảm biến -->
 			<div class="list-group-item list-group-item-home">
 				<div>
 					<i class="fa fa-tachometer feature-icon  text-primary"></i>
 				</div>
 				<div>
-					<h3 class="home-heading">Cập nhật trạng thái</h3>
+					<h3 class="home-heading">Cập nhập cảm biến</h3>
 					<button class="button" ng-click="updateSensor()">
-						cap nhat gia tri
+						Nhấn vô dể cập nhập giá trị cảm biến
 					</div>
 				</div>
 			</div>
+		
 	<footer><center>Copyright &copy;NGUYEN TUAN ANH&&TRAN KHA CUONG</div></center>
 		</div>
 	</div>
