--- a/webapp/home.html
+++ b/webapp/home.html
@@ -56,7 +56,7 @@
 					Kết quả: {{CamBienMua}}
 				</div>
 			</div>
-	            			<!-- Cục cập nhập giá trị cảm biến -->
+			<!-- Cục cập nhập giá trị cảm biến -->
 			<div class="list-group-item list-group-item-home">
 				<div>
 					<i class="fa fa-tachometer feature-icon  text-primary"></i>
@@ -64,7 +64,7 @@
 				<div>
 					<h3 class="home-heading">Cập nhập cảm biến</h3>
 					<button class="button" ng-click="updateSensor()">
-						cap nhat
+						Nhấn vô dể cập nhập giá trị cảm biến
 					</div>
 				</div>
 			</div>
