--- a/webapp/home.html
+++ b/webapp/home.html
@@ -29,7 +29,7 @@
 	    
 	     .div1{
             border:1px solid black;
-            margin-right:150px;
+            margin-left:15px;
         }
     </style>
 
