--- a/webapp/home.html
+++ b/webapp/home.html
@@ -13,7 +13,8 @@
             color:white;
 	}
         .title1{
-           
+            font-size:30px;
+            text-align:center;
             padding-top:15px;
         }
      .button2 {
@@ -27,8 +28,11 @@
 	.button3:hover {background-color: #f44336;color: white;}    
 	    
 	     .div1{
-            border:1px solid black;
-            margin-left:15px;
+           border:1px solid black;
+            margin-top:20px;
+            margin-left:50px;
+            margin-bottom:30px;
+            margin-left:150px;
         }
     </style>
 
