--- a/webapp/home.html
+++ b/webapp/home.html
@@ -28,8 +28,10 @@
 	.button3:hover {background-color: #f44336;color: white;}    
 	    
 	     .div1{            
+            margin-top:20px;
+            margin-left:50px;
             margin-bottom:30px;
-            margin-left:300px;
+            margin-left:150px;
         }
     </style>
 
