--- a/webapp/home.html
+++ b/webapp/home.html
@@ -60,8 +60,8 @@
 		         	<i class="fa fa-tachometer feature-icon  text-primary"></i>
 				</div>
 				<div>
-				        <div class="div1"><h3 class="home-heading">cổng</h3>
-				       <center><input type="text" id="ip" class="ip" placeholder="ip theo code adruino"></input><br></center>
+				        <h3 class="home-heading">cổng</h3>
+				      <div class="div1"><center><input type="text" id="ip" class="ip" placeholder="ip theo code adruino"></input><br></center>
 					<button class="button button2" ng-click="upt5()">ON D5</button> 
 					<button class="button button3" ng-click="upt51()">Off D5</button>
 					 <br>
