--- a/webapp/home.html
+++ b/webapp/home.html
@@ -28,9 +28,7 @@
 	.button3:hover {background-color: #f44336;color: white;}    
 	    
 	     .div1{            
-            margin-top:20px;
-            margin-left:50px;
-            margin-bottom:30px;
+           
             margin-left:350px;
         }
     </style>
@@ -60,8 +58,8 @@
 		         	<i class="fa fa-tachometer feature-icon  text-primary"></i>
 				</div>
 				<div>
-				        <h3 class="home-heading">cổng</h3>
-				      <div class="div1"><center><input type="text" id="ip" class="ip" placeholder="ip theo code adruino"></input><br></center>
+				         <div class="div1"><h3 class="home-heading">cổng</h3>
+				         <center><input type="text" id="ip" class="ip" placeholder="ip theo code adruino"></input><br></center>
 					<button class="button button2" ng-click="upt5()">ON D5</button> 
 					<button class="button button3" ng-click="upt51()">Off D5</button>
 					 <br>
