--- a/webapp/home.html
+++ b/webapp/home.html
@@ -29,7 +29,7 @@
 	    
 	     .div1{            
            
-            margin-left:350px;
+            margin-left:450px;
         }
     </style>
 
@@ -55,10 +55,10 @@
 		<!-- Cục cập nhập led-->
 			     <div class="list-group-item list-group-item-home">
 				<div>				
-		         	<div class="div1"><i class="fa fa-tachometer feature-icon  text-primary"></i>
+		         	<i class="fa fa-tachometer feature-icon  text-primary"></i>
 				</div>
 				<div>
-				         <h3 class="home-heading">cổng</h3>
+				         <div class="div1"><h3 class="home-heading">cổng</h3>
 				         <center><input type="text" id="ip" class="ip" placeholder="ip theo code adruino"></input><br></center>
 					<button class="button button2" ng-click="upt5()">ON D5</button> 
 					<button class="button button3" ng-click="upt51()">Off D5</button>
