--- a/webapp/home.html
+++ b/webapp/home.html
@@ -33,7 +33,7 @@
         }
 	    .div2{            
            
-            margin-left:5px;
+            margin-right:5px;
         }
     </style>
 
