--- a/webapp/home.html
+++ b/webapp/home.html
@@ -49,8 +49,7 @@
                            <div id="header">
                            <div class="title1">SOCKET WEB</div>
 				<img src=http://vtv1.vcmedia.vn/k:2015/untitled-1-1431324468444/toi-thay-hoa-vang-tren-co-xanh-tung-trailer-chinh-thuc.jpg width=1400px height=250px>
-                  
-				<h1>Socket Client Webapp <small>1.0</small>
+				<div class="title1">Socket Client Webapp</div><small>1.0</small>
 			 </div
 			 </div		
 		   </body>	
