--- a/webapp/home.html
+++ b/webapp/home.html
@@ -31,22 +31,14 @@
         margin: 5px;
         border: 1px solid #ccc;
         float: left;
-       width:500;
-    } 
-	  div.img {
-        margin: 5px;
-        border: 1px solid #ccc;
-        float: left;
-       width:500;
+        width: 200px;
     } 
     div.img:hover {
         border: 1px solid #777;
     }
     div.img img {
         width:100%;
-        height: 350;
-    }
-  
+        height: auto;
     }
     </style>
 
