--- a/webapp/home.html
+++ b/webapp/home.html
@@ -56,17 +56,17 @@
 				<div>
 					<h3 class="home-heading">cổng</h3>
 				          <input type="text" id="ip" class="ip" placeholder="ip theo code adruino"></input><br>
-					<button class="button button2" ng-click="upt5()">ON D5</button>
-					<button class="button button3" ng-click="upt51()">Off D5</button>
+					<button class="button button2" ng-click="upt5()">ON TBI 1</button>
+					<button class="button button3" ng-click="upt51()">Off TBI 1</button>
 					 <br>
-					<button class="button button2" ng-click="upt6()">ON D6</button>
-					<button class="button button3" ng-click="upt61()">Off D6</button>
+					<button class="button button2" ng-click="upt6()">ON TB2</button>
+					<button class="button button3" ng-click="upt61()">Off TB2</button>
 					 <br>
-					<button class="button button2" ng-click="upt7()">ON D7</button>
-					<button class="button button3" ng-click="upt71()">Off D7</button>
+					<button class="button button2" ng-click="upt7()">ON TB3</button>
+					<button class="button button3" ng-click="upt71()">Off TB3</button>
 				         <br>
-					<button class="button button2" ng-click="upt8()">ON D8</button>
-					<button class="button button3" ng-click="upt81()">Off D8</button>
+					<button class="button button2" ng-click="upt8()">ON TBI4</button>
+					<button class="button button3" ng-click="upt81()">Off TBI4</button>
 					 <br>
 					
 				</div>
