--- a/webapp/home.html
+++ b/webapp/home.html
@@ -56,7 +56,7 @@
 				<div>
 					<h3 class="home-heading">cổng</h3>
 				          <input type="text" id="ip" class="ip" placeholder="ip theo code adruino"></input><br>
-					<button class="button button2" ng-click="upt5()"<h>>ON TBI 1</button>
+					<button class="button button2" ng-click="upt5()"<h>ON TBI 1</button>
 					<button class="button button3" ng-click="upt51()">Off TBI 1</button>
 					 <br>
 					<button class="button button2" ng-click="upt6()">ON TB2</button>
