--- a/webapp/home.html
+++ b/webapp/home.html
@@ -57,6 +57,14 @@
 					<h3 class="home-heading">cổng</h3>
 				          <input type="text" id="ip" class="ip" placeholder="ip theo code adruino"></input><br>
 					<button class="button button2" ng-click="upt5()">ON TBI 1</button>
+				<body>
+				   <script>
+                                   function upt5(){
+                                    document.getElementById("demo").innerHTML = "TBỊ 1 ON";   
+           
+                                    }
+                                  </script>
+					</body>
 					<button class="button button3" ng-click="upt51()">Off TBI 1</button>
 					 <br>
 					<button class="button button2" ng-click="upt6()">ON TB2</button>
